# sklearn_autobatch

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml  tox.ini
sklearn_autobatch/estimators/: auto_batch_mixin.py
tests/estimators/: auto_batch_mixin_test.py
