[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sklearn-autobatch"
dynamic = ["version", "readme"]
dependencies = [
    'scikit-learn>=1.3.0, <2.0.0',
]
requires-python = ">=3.9"
authors = [
  {name = "Pawel Trajdos", email = "pawel.trajdos@pwr.edu.pl"},
]
maintainers = [
  {name = "Pawel Trajdos", email = "pawel.trajdos@pwr.edu.pl"}
]
description = "Automatic batch size selection for scikit-learn estimators"

license = "BSD-3-Clause"
license-files = ["LICEN[CS]E.*"]
keywords = ["scikit-learn", "batch size"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]

dev = [
    'coverage>=7.8.0, <8.0.0',
    'unittest-parallel>=1.5.3, <2.0.0',
    'pandas>=2.0.0',
    'pdoc3>=0.11.1, <1.0.0',
    'pytest>=8.3.5, <9.0.0',
    'pytest-cov>=6.1.1, <7.0.0',
    'pytest-profiling>=1.8.1, <2.0.0',
    'pytest-xdist>=3.6.1, <4.0.0',
    'snakeviz>=2.2.2, <3.0.0',
    'tox>=4.0.0, <5.0.0',
]

[tool.setuptools.dynamic]
version = {attr = "sklearn_autobatch.__version__"}  # any module attribute compatible with ast.literal_eval
readme = {file = ["README.md"]}

[project.urls]
Repository = "https://github.com/ptrajdos/sklearn_autobatch.git"

[tool.setuptools]
packages = { find = { include = ["sklearn_autobatch", "sklearn_autobatch.*"] } }
